# customers

./: .gitignore  Containerfile  MANIFEST.in  README.md  pyproject.toml
.github/wiki/: Home.md
.github/workflows/: ci.yml  init-wiki.yml  release.yml
customers_service/: __init__.py  app.py  auth_security.py  authorization.py  config.py  nmchain_client.py  profile_settings.py  store.py
customers_service/static/: styles.css
customers_service/templates/: login.html  register.html  setup.html
tests/: test_app.py
