[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralmimicry-customers"
version = "0.1.0"
description = "NeuralMimicry Customers service for registration, authentication, sessions, and voice credentials."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0,<4",
  "requests>=2.32,<3",
  "psycopg[binary]>=3.2,<4",
  "psycopg-pool>=3.2,<4",
  "redis>=5.0,<6",
  "cryptography>=42,<46",
  "Werkzeug>=3.0,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[tool.setuptools.packages.find]
include = ["customers_service*"]
